examples/modules/expected/0787-modules-same-name-const-ambiguous.stderr
error: 'K' is ambiguous: it is declared in multiple flat-imported modules; qualify the reference or remove the duplicate import
  --> examples/modules/0787-modules-same-name-const-ambiguous.sx:12:21
   |
12 |     print("K={}\n", K);
   |                     ^
